@@ -44,7 +44,7 @@ find out how Octave is being used in other places.
 <p>
 Virtually everyone thinks that the name Octave has something to do with
 music, but it is actually the name of a former
-<a href="http://www.engr.orst.edu/~reed/CSTR/profs.html">professor</a>
+<a href="http://www.che.orst.edu/faculty/profs.html">professor</a>
 of mine who wrote a famous textbook on chemical reaction engineering,
 and who was also well known for his ability to do quick `back of the
 envelope' calculations.  We hope that this software will make it
